doc: new workflow.md